--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             </li>
             <!-- fine menu button -->
           </ul>
+          <div class="small-menu">
+            <a href="#"><i class="fas fa-bars"></i></a>
+          </div>
         </nav>
       <!-- fine menu -->
       <!-- inizio jumbotron -->
@@ -74,7 +77,11 @@
   <!-- fine header -->
   <!-- inizio main -->
   <main>
-    
+    <!-- inizio sezione browse -->
+    <section id="browse">
+
+    </section>
+    <!-- fine sezione browse -->
   </main>
   <!-- fine main -->
 <!-- javascript -->
