Add section browse

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- inizio jumbotron -->
       <div class="jumbotron container">
         <h1>{{bg[indice].title}}</h1>
-        <p>Edu prime is the most versatile WordPress theme fot educational purposes,<br> showcasing universities, courses, secondary schools etc. </p>
+        <p>Edu prime is the most versatile WordPress theme for educational purposes,<br> showcasing universities, courses, secondary schools etc. </p>
         <div class="btns">
           <a href="#" class="btn yellow"><i class="fas fa-search"></i>Search courses</a>
           <a href="#" class="btn white"><i class="fas fa-user-plus"></i>Apply for university</a>
@@ -78,8 +78,25 @@
   <!-- inizio main -->
   <main>
     <!-- inizio sezione browse -->
-    <section id="browse">
-
+    <section id="browse" >
+      <div class="mini-container">
+        <div class="bg-img-left">
+          <img src="img/Books-icon.png" alt="bg img">
+        </div>
+        <div class="content">
+          <div class="text">
+            <h2>Thousends of courses<br> for any type of student</h2>
+            <p>At EduPrime, it doesn’t matter what domain you wish to pursue a career in. Here you can find a course that satisfies your needs within a click away and applies for a course in a matter of minutes. EduPrime is ranked as the most versatile university in the world, thanks to the number of courses it provides.</p>
+            <a href="#" class="btn yellow">Browse through courses</a>
+          </div>
+          <div class="image">
+            <img src="img/Graduation-Illustration.png" alt="graduation img">
+          </div>
+        </div>
+      </div>
+      <div class="bg-img-right">
+        <img src="img/home-background.png" alt="bg img">
+      </div>
     </section>
     <!-- fine sezione browse -->
   </main>
