Add section latest

--- a/index.html
+++ b/index.html
@@ -188,11 +188,65 @@
         </div>
       </div>
       <a href="#" class="btn yellow">View All Events</a>
+    </div>
+    <!-- fine sezione events -->
+    <!-- inizio sezione latest -->
+    <div id="latest">
+      <div class="mini-container">
+        <h2>Latest Courses</h2>
+        <div class="row">
+          <div class="course">
+            <div class="course-img">
+              <img src="img/Decisions-icon.png" alt="img">
+            </div>
+            <h3>Make Better Decisions</h3>
+            <p><i class="far fa-user"></i>Teacher: <span>James Collins</span></p>
+            <p><i class="fas fa-money-bill"></i>Price: <span>Free</span></p>
+            <a href="#" class="btn red"><i class="fas fa-eye"></i> View Course</a>
+          </div>
+          <div class="course">
+            <div class="course-img">
+              <img src="img/Decisions-icon.png" alt="img">
+            </div>
+            <h3>How to be a speaker</h3>
+            <p><i class="far fa-user"></i>Teacher: <span>James Collins</span></p>
+            <p><i class="fas fa-money-bill"></i>Price: <span>Free</span></p>
+            <a href="#" class="btn red"><i class="fas fa-eye"></i> View Course</a>
+          </div>
+          <div class="course">
+            <div class="course-img">
+              <img src="img/Decisions-icon.png" alt="img">
+            </div>
+            <h3>Network Introductions</h3>
+            <p><i class="far fa-user"></i>Teacher: <span>James Collins</span></p>
+            <p><i class="fas fa-money-bill"></i>Price: <span>Free</span></p>
+            <a href="#" class="btn red"><i class="fas fa-eye"></i> View Course</a>
+          </div>
+          <div class="course">
+            <div class="course-img">
+              <img src="img/Decisions-icon.png" alt="img">
+            </div>
+            <h3>Brand Management</h3>
+            <p><i class="far fa-user"></i>Teacher: <span>James Collins</span></p>
+            <p><i class="fas fa-money-bill"></i>Price: <span>Free</span></p>
+            <a href="#" class="btn red"><i class="fas fa-eye"></i> View Course</a>
+          </div>
+          <div class="course">
+            <div class="course-img">
+              <img src="img/Decisions-icon.png" alt="img">
+            </div>
+            <h3>Make Better Decisions</h3>
+            <p><i class="far fa-user"></i>Teacher: <span>James Collins</span></p>
+            <p><i class="fas fa-money-bill"></i>Price: <span>Free</span></p>
+            <a href="#" class="btn red"><i class="fas fa-eye"></i> View Course</a>
+          </div>
+        </div>
+      </div>
       <div class="img-bg">
         <img src="svg/svg-1.svg" alt="bg">
       </div>
     </div>
-    <!-- fine sezione events -->
+    <!-- fine sezione latest -->
   </main>
   <!-- fine main -->
 <!-- javascript -->
