Add method section

--- a/index.html
+++ b/index.html
@@ -247,6 +247,44 @@
       </div>
     </div>
     <!-- fine sezione latest -->
+    <!-- inizio sezione method -->
+    <section id="method" >
+      <!-- first container -->
+      <div class="mini-container">
+        <div class="bg-img-left">
+          <img src="img/Exam-icon.png" alt="bg img">
+        </div>
+        <div class="content">
+          <div class="text">
+            <h2>The most efficient<br> examination method</h2>
+            <p>EduPrime has gathered teachers from around the globe to brainstorm in order to facilitate the evaluation of our students. Every teacher from our university has an influence on how students are evaluated at his/her subject.</p>
+            <a href="#" class="btn red">Discover the Method</a>
+          </div>
+          <div class="image">
+            <img src="img/Exam-Illustration.png" alt="graduation img">
+          </div>
+        </div>
+      </div>
+      <!-- fine first container -->
+      <!-- second container -->
+      <div class="mini-container">
+        <div class="bg-img-right">
+          <img src="img/Exam-icon-1.png" alt="bg img">
+        </div>
+        <div class="content">
+          <div class="image">
+            <img src="img/Girl-Illustration.png" alt="graduation img">
+          </div>
+          <div class="text">
+            <h2>Variable fees for<br> international students</h2>
+            <p>EduPrime has gathered teachers from around the globe to brainstorm in order to facilitate the evaluation of our students. Every teacher from our university has an influence on how students are evaluated at his/her subject.</p>
+            <a href="#" class="btn red">List of fees</a>
+          </div>
+        </div>
+      </div>
+      <!-- fine second container -->
+    </section>
+    <!-- fine sezione method -->
   </main>
   <!-- fine main -->
 <!-- javascript -->
