--- a/index.html
+++ b/index.html
@@ -285,6 +285,15 @@
       <!-- fine second container -->
     </section>
     <!-- fine sezione method -->
+    <!-- inizio sezione newsletter -->
+    <div id="newsletter">
+      <h2>Subscribe Now to Our Newsletter</h2>
+      <div class="email">
+        <input type="text" placeholder="Email address...">
+        <a href="#" class="btn yellow"><i class="fas fa-paper-plane fa-lg"></i></a>
+      </div>
+    </div>
+    <!-- fine sezione newsletter -->
   </main>
   <!-- fine main -->
 <!-- javascript -->
