Add footer and END

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
         <a href="#"><i class="far fa-dot-circle"></i></a>
       </div>
       <!-- fine left box -->
+      <!-- inizio arrows -->
+      <div class="arrow-left">
+        <a href="#" @click="nextSlider"><i class="fas fa-angle-left fa-5x"></i></a>
+      </div>
+      <div class="arrow-right">
+        <a href="#" @click="prevSlider"><i class="fas fa-angle-right fa-5x"></i></a>
+      </div>
+      <!-- fine arrows -->
     </div>
     <!-- fine header layer -->
   </header>
@@ -316,6 +324,60 @@
     <!-- fine sezione partners -->
   </main>
   <!-- fine main -->
+  <!-- inizio footer -->
+  <footer>
+    <div class="mini-container">
+      <div class="footer-left">
+        <div class="logo">
+          <img src="img/theme_eduprime_logo.png" alt="logo">
+        </div>
+        <p>EduPrime is the most versatile WordPress theme for<br> educational purposes, showcasing universities,<br> courses, secondary schools etc.</p>
+        <div class="social">
+          <a href="#" class="btn red"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="btn red"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="btn red"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="footer-middle">
+        <h3>Get EduPrime</h3>
+        <a href="#"><p>Request a website</p></a>
+        <a href="#"><p>Browse Themes</p></a>
+        <a href="#"><p>Payment options</p></a>
+        <a href="#"><p>Support System</p></a>
+        <a href="#"><p>Checkout</p></a>
+        <a href="#"><p>Purchase Theme</p></a>
+      </div>
+      <div class="footer-middle">
+        <h3>Networking</h3>
+        <a href="#"><p>Purchase Theme</p></a>
+        <a href="#"><p>Our Benefits</p></a>
+        <a href="#"><p>Our Team</p></a>
+        <a href="#"><p>Our Services</p></a>
+        <a href="#"><p>Other Products</p></a>
+        <a href="#"><p>My account</p></a>
+      </div>
+      <div class="footer-right">
+        <div class="searchbar">
+          <input type="text" placeholder="Search...">
+          <a href="#" class="btn yellow"><i class="fas fa-search"></i></a>
+        </div>
+        <h3>Search categories</h3>
+        <p>
+          <a href="#"><span>ECONOMY</span></a>
+          <a href="#"><span>DESIGN</span></a>
+          <a href="#"><span>COACHING</span></a>
+          <a href="#"><span>BUSINESS</span></a>
+        </p>
+        <p>
+          <a href="#"><span>MEDICINE</span></a>
+          <a href="#"><span>LAW</span></a>
+          <a href="#"><span>FITNESS</span></a>
+        </p>
+        <p>ModelTheme. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- fine footer -->
 <!-- javascript -->
 <script src="js/script.js" charset="utf-8"></script>
 </body>
