Add corner button

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         <a href="#"><i class="far fa-dot-circle"></i></a>
       </div>
       <!-- fine left box -->
+      <!-- inizio corner bottom -->
+      <div class="corner-button">
+        <a href="#" class="btn yellow"><i class="fas fa-angle-up fa-3x"></i></a>
+      </div>
+      <!-- fine corner bottom -->
       <!-- inizio arrows -->
       <div class="arrow-left">
         <a href="#" @click="nextSlider"><i class="fas fa-angle-left fa-5x"></i></a>
